// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`model typechecking 1`] = `
[
  {
    "ctx": {
      "actionName": "setX",
      "args": [
        "5",
      ],
      "data": {
        Symbol(actionTrackingMiddlewareData): {
          "startAccepted": true,
          "state": "finished",
        },
        Symbol(simpleDataContext): [Circular],
      },
      "parentContext": undefined,
      "rootContext": [Circular],
      "target": M {
        "$": {
          "$modelId": "id-1",
          "arr": [],
          "untyped": 5,
          "x": 10,
          "y": "6",
        },
        "$modelType": "M",
      },
      "type": "sync",
    },
    "type": "start",
  },
  {
    "ctx": {
      "actionName": "setX",
      "args": [
        "5",
      ],
      "data": {
        Symbol(actionTrackingMiddlewareData): {
          "startAccepted": true,
          "state": "finished",
        },
        Symbol(simpleDataContext): [Circular],
      },
      "parentContext": undefined,
      "rootContext": [Circular],
      "target": M {
        "$": {
          "$modelId": "id-1",
          "arr": [],
          "untyped": 5,
          "x": 10,
          "y": "6",
        },
        "$modelType": "M",
      },
      "type": "sync",
    },
    "result": "throw",
    "type": "finish",
  },
]
`;

exports[`model typechecking 2`] = `
[
  {
    "ctx": {
      "actionName": "setArr",
      "args": [
        [
          1,
          2,
          "3",
        ],
      ],
      "data": {
        Symbol(actionTrackingMiddlewareData): {
          "startAccepted": true,
          "state": "finished",
        },
        Symbol(simpleDataContext): [Circular],
      },
      "parentContext": undefined,
      "rootContext": [Circular],
      "target": M {
        "$": {
          "$modelId": "id-1",
          "arr": [],
          "untyped": 5,
          "x": 10,
          "y": "6",
        },
        "$modelType": "M",
      },
      "type": "sync",
    },
    "type": "start",
  },
  {
    "ctx": {
      "actionName": "setArr",
      "args": [
        [
          1,
          2,
          "3",
        ],
      ],
      "data": {
        Symbol(actionTrackingMiddlewareData): {
          "startAccepted": true,
          "state": "finished",
        },
        Symbol(simpleDataContext): [Circular],
      },
      "parentContext": undefined,
      "rootContext": [Circular],
      "target": M {
        "$": {
          "$modelId": "id-1",
          "arr": [],
          "untyped": 5,
          "x": 10,
          "y": "6",
        },
        "$modelType": "M",
      },
      "type": "sync",
    },
    "result": "throw",
    "type": "finish",
  },
]
`;

exports[`model typechecking 3`] = `
[
  {
    "ctx": {
      "actionName": "addArr",
      "args": [
        "3",
      ],
      "data": {
        Symbol(actionTrackingMiddlewareData): {
          "startAccepted": true,
          "state": "finished",
        },
        Symbol(simpleDataContext): [Circular],
      },
      "parentContext": undefined,
      "rootContext": [Circular],
      "target": M {
        "$": {
          "$modelId": "id-1",
          "arr": [
            1,
            2,
          ],
          "untyped": 5,
          "x": 10,
          "y": "6",
        },
        "$modelType": "M",
      },
      "type": "sync",
    },
    "type": "start",
  },
  {
    "ctx": {
      "actionName": "addArr",
      "args": [
        "3",
      ],
      "data": {
        Symbol(actionTrackingMiddlewareData): {
          "startAccepted": true,
          "state": "finished",
        },
        Symbol(simpleDataContext): [Circular],
      },
      "parentContext": undefined,
      "rootContext": [Circular],
      "target": M {
        "$": {
          "$modelId": "id-1",
          "arr": [
            1,
            2,
          ],
          "untyped": 5,
          "x": 10,
          "y": "6",
        },
        "$modelType": "M",
      },
      "type": "sync",
    },
    "result": "throw",
    "type": "finish",
  },
]
`;
